[package]
name = "websrv"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { version = "2.15", features = ["tokio"] }
ntex-io-uring = "0.7"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11"
num_cpus = "1.17"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true