[package]
name = "websrv"
version = "0.1.0"
edition = "2021"

[dependencies]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
rpath = false
overflow-checks = false
incremental = false

[profile.release.build-override]
opt-level = 3
codegen-units = 1